--- a/app/src/main/res/layout/activity_guest_custumer_login_acivity.xml
+++ b/app/src/main/res/layout/activity_guest_custumer_login_acivity.xml
@@ -14,13 +14,24 @@
         layout="@layout/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <com.yberry.dinehawaii.customview.CustomTextView
+        android:id="@+id/text_heading"
+        style="@style/TextAppearance.AppCompat.Subhead"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_30sdp"
+        android:gravity="center"
+        android:padding="@dimen/_5sdp"
+        android:text="@string/business_login_string1"
+        android:textColor="@color/offwhite"
+        app:edittextfont="Raleway-Regular.ttf" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/_10sdp"
         android:layout_marginRight="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:orientation="vertical">
 
 
