--- a/app/src/main/res/layout/activity_bussiness_restaurent_resturant_step_two.xml
+++ b/app/src/main/res/layout/activity_bussiness_restaurent_resturant_step_two.xml
@@ -383,9 +383,9 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
+                        android:id="@+id/tvGETaxValue"
                         android:padding="3dp"
-                        android:text="GE Tax: 4.712%"
+                        android:text="GE Tax: "
 
                         app:edittextfont="@string/raleway_bold" />
 
