edited by kirti

--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -708,7 +708,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.3"
-                        android:text="Your food will be delivered in approximately"
+                        android:text="Estimated Time"
                         app:edittextfont="Raleway-Regular.ttf"
 
                         />
