--- a/app/src/main/res/layout/activity_edit_menu_item.xml
+++ b/app/src/main/res/layout/activity_edit_menu_item.xml
@@ -8,7 +8,7 @@
     android:background="@color/white"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context="com.yberry.dinehawaii.Bussiness.Activity.EditMenuItemActivity">
+    tools:context="com.yberry.dinehawaii.Bussiness.Activity.AddMenuItemActivity">
 
     <include
         android:id="@+id/toolbar_bar"
@@ -310,6 +310,57 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:background="@color/colorDivider"></View>
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvCustom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvSelectService"
+                android:layout_marginTop="@dimen/_9sdp"
+                android:drawableLeft="@drawable/drawable_green_dot"
+                android:drawablePadding="@dimen/_5sdp"
+                android:gravity="center"
+                android:text="Add Customizations"
+                android:textColor="@color/colorGreen"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                app:edittextfont="Raleway-Bold.ttf" />
+
+            <android.support.v4.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_items"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+                </LinearLayout>
+            </android.support.v4.widget.NestedScrollView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardMenuList"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:layout_margin="@dimen/_8sdp"
+                android:clickable="true"
+                android:elevation="5dp"
+                android:foreground="@drawable/custom_ripple_card"
+                app:cardBackgroundColor="@color/green"
+                app:cardCornerRadius="@dimen/_5sdp"
+                app:cardElevation="5dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:padding="@dimen/_5sdp"
+                    android:id="@+id/addMore"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/fab_add"/>
+            </android.support.v7.widget.CardView>
+
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
