--- a/app/src/main/res/layout/vendor_orderhist_adapter_layout.xml
+++ b/app/src/main/res/layout/vendor_orderhist_adapter_layout.xml
@@ -1,75 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/cardView"
-    android:layout_marginTop="@dimen/_5sdp"
+    android:layout_marginBottom="@dimen/_1sdp"
     android:layout_marginLeft="@dimen/_6sdp"
     android:layout_marginRight="@dimen/_6sdp"
-    android:layout_marginBottom="@dimen/_1sdp"
+    android:layout_marginTop="@dimen/_5sdp"
     android:elevation="2dp"
-    app:cardElevation="2dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:cardElevation="2dp">
 
     <LinearLayout
-        android:padding="@dimen/_10sdp"
+        android:id="@+id/recycler_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:id="@+id/recycler_item">
-
+        android:padding="@dimen/_8sdp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="0.15"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-            <com.yberry.dinehawaii.customview.CustomTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="Date : "
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:textStyle="bold"
-                app:edittextfont="Raleway-Bold.ttf" />
 
-            <com.yberry.dinehawaii.customview.CustomTextView
-                android:id="@+id/dateTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="NA"
-                style="@style/TextAppearance.AppCompat.Subhead"
-               
-                app:edittextfont="Raleway-Regular.ttf" />
-            </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="0.1"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.15"
                 android:orientation="horizontal">
+
                 <com.yberry.dinehawaii.customview.CustomTextView
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="Date : "
+                    android:textStyle="bold"
+                    app:edittextfont="Raleway-Bold.ttf" />
+
+                <com.yberry.dinehawaii.customview.CustomTextView
+                    android:id="@+id/dateTextView"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="NA"
+
+                    app:edittextfont="Raleway-Regular.ttf" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:orientation="horizontal">
+
+                <com.yberry.dinehawaii.customview.CustomTextView
+                    style="@style/TextAppearance.AppCompat.Subhead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="Total : "
-                    style="@style/TextAppearance.AppCompat.Subhead"
                     app:edittextfont="Raleway-Bold.ttf" />
+
                 <com.yberry.dinehawaii.customview.CustomTextView
                     android:id="@+id/totalAmountTextView"
+                    style="@style/TextAppearance.AppCompat.Subhead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="NA"
-                    style="@style/TextAppearance.AppCompat.Subhead"
                     app:edittextfont="Raleway-Regular.ttf" />
             </LinearLayout>
         </LinearLayout>
@@ -77,97 +81,53 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_8sdp"
+           android:layout_marginTop="@dimen/_5sdp"
             android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="0.15"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+
+
+                <com.yberry.dinehawaii.customview.CustomTextView
+                    android:id="@+id/customTextView9"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="Vendor Name : "
+                    app:edittextfont="Raleway-Bold.ttf" />
+
+                <com.yberry.dinehawaii.customview.CustomTextView
+                    android:id="@+id/nameTextView"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="NA"
+                    app:edittextfont="Raleway-Regular.ttf" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+           android:layout_marginTop="@dimen/_5sdp"
+            android:orientation="horizontal">
+
 
             <com.yberry.dinehawaii.customview.CustomTextView
-                        android:id="@+id/customTextView9"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:text="Vendor Name : "
-                        style="@style/TextAppearance.AppCompat.Subhead"
-                        app:edittextfont="Raleway-Bold.ttf" />
-                    <com.yberry.dinehawaii.customview.CustomTextView
-                        android:id="@+id/nameTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:text="NA"
-                        style="@style/TextAppearance.AppCompat.Subhead"
-                        app:edittextfont="Raleway-Regular.ttf" />
-            </LinearLayout>
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Items : "
+                app:edittextfont="Raleway-Bold.ttf" />
+
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvOrderItems"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="NA"
+                app:edittextfont="Raleway-Regular.ttf" />
 
         </LinearLayout>
-        <LinearLayout
-            android:id="@+id/llcolumns"
-            android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.8">
-
-                    <com.yberry.dinehawaii.customview.CustomTextView
-                        style="@style/TextAppearance.AppCompat.Small"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/_2sdp"
-                        android:text="Item Name"
-                        app:edittextfont="Raleway-Bold.ttf" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.2">
-
-                    <com.yberry.dinehawaii.customview.CustomTextView
-                        style="@style/TextAppearance.AppCompat.Small"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="right"
-                        android:padding="@dimen/_2sdp"
-                        android:text="Quantity"
-                        app:edittextfont="Raleway-Bold.ttf" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorDivider" />
-        </LinearLayout>
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/listview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
     </LinearLayout>
 </android.support.v7.widget.CardView>
