edited by kirti

--- a/app/src/main/res/layout/activity_business_information_next.xml
+++ b/app/src/main/res/layout/activity_business_information_next.xml
@@ -171,7 +171,7 @@
                         android:inputType="textCapWords"
                         android:paddingBottom="@dimen/_12sdp"
                         android:singleLine="true"
-                        android:textColor="@color/white"
+                        android:textColor="@color/gray"
                         android:textColorHint="@color/offwhite"
                         app:edittextfont="@string/raleway_regular" />
 
