--- a/app/src/main/res/menu/menu_add_food.xml
+++ b/app/src/main/res/menu/menu_add_food.xml
@@ -7,7 +7,7 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/editfood"
-        android:title="EDIT"
+        android:title="UPDATE"
         android:visible="false"
         app:showAsAction="always"
         />
