--- a/app/src/main/res/layout/activity_edit_menu_item.xml
+++ b/app/src/main/res/layout/activity_edit_menu_item.xml
@@ -33,6 +33,7 @@
 
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/tvServiceTypr"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_9sdp"
@@ -41,11 +42,11 @@
                 android:gravity="center"
                 android:text="Service Type"
                 android:textColor="@color/colorGreen"
-                style="@style/TextAppearance.AppCompat.Subhead"
                 app:edittextfont="Raleway-Bold.ttf" />
 
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/tvSelectService"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
@@ -56,10 +57,9 @@
                 android:focusableInTouchMode="false"
                 android:hint="Select Service Type"
                 android:padding="@dimen/_5sdp"
-                style="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/edit_text_color"
 
-                app:edittextfont="Raleway-Regular.ttf"></com.yberry.dinehawaii.customview.CustomTextView>
+                app:edittextfont="Raleway-Regular.ttf" />
 
             <View
                 android:layout_width="wrap_content"
@@ -70,6 +70,7 @@
 
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/tvFoodType"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_9sdp"
@@ -78,12 +79,12 @@
                 android:gravity="center"
                 android:text="Food Type"
                 android:textColor="@color/colorGreen"
-                style="@style/TextAppearance.AppCompat.Subhead"
                 app:edittextfont="Raleway-Bold.ttf" />
 
 
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/spinSelectFoodType"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvFoodType"
@@ -95,10 +96,9 @@
                 android:focusableInTouchMode="false"
                 android:hint="Select Food Type"
                 android:padding="@dimen/_5sdp"
-                style="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/edit_text_color"
 
-                app:edittextfont="Raleway-Regular.ttf"></com.yberry.dinehawaii.customview.CustomTextView>
+                app:edittextfont="Raleway-Regular.ttf" />
 
             <View
                 android:layout_width="wrap_content"
@@ -106,6 +106,7 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:background="@color/colorDivider"></View>
+
             <com.yberry.dinehawaii.customview.CustomTextView
                 style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
@@ -132,16 +133,18 @@
                 android:padding="@dimen/_5sdp"
                 android:singleLine="true"
                 android:textColor="@color/edit_text_color"
-                app:edittextfont="Raleway-Regular.ttf"></com.yberry.dinehawaii.customview.CustomEditText>
+                app:edittextfont="Raleway-Regular.ttf" />
 
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="1dp"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:background="@color/colorDivider"></View>
+                android:background="@color/colorDivider" />
+
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/tvFoodName"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvSelectService"
@@ -151,22 +154,21 @@
                 android:gravity="center"
                 android:text="Food Name"
                 android:textColor="@color/colorGreen"
-                style="@style/TextAppearance.AppCompat.Subhead"
                 app:edittextfont="Raleway-Bold.ttf" />
 
             <com.yberry.dinehawaii.customview.CustomEditText
                 android:id="@+id/edfoodname"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
+                android:background="@null"
                 android:hint="Enter Food Name"
                 android:padding="@dimen/_5sdp"
-                android:background="@null"
                 android:singleLine="true"
-                style="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/edit_text_color"
-                app:edittextfont="Raleway-Regular.ttf"></com.yberry.dinehawaii.customview.CustomEditText>
+                app:edittextfont="Raleway-Regular.ttf" />
 
             <View
                 android:layout_width="wrap_content"
@@ -176,6 +178,7 @@
                 android:background="@color/colorDivider"></View>
 
             <com.yberry.dinehawaii.customview.CustomTextView
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_9sdp"
@@ -184,17 +187,19 @@
                 android:gravity="center"
                 android:text="Food Image"
                 android:textColor="@color/colorGreen"
-                style="@style/TextAppearance.AppCompat.Subhead"
                 app:edittextfont="Raleway-Bold.ttf" />
+
             <ImageView
+                android:id="@+id/food_image"
                 android:layout_width="@dimen/_60sdp"
                 android:layout_height="@dimen/_60sdp"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:id="@+id/food_image"
-                android:src="@drawable/ic_add_a_photo_black_24dp"/>
+                android:src="@drawable/ic_add_a_photo_black_24dp" />
+
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/tvFoodquan"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvSelectService"
@@ -204,7 +209,6 @@
                 android:gravity="center"
                 android:text="Quantity"
                 android:textColor="@color/colorGreen"
-                style="@style/TextAppearance.AppCompat.Subhead"
                 app:edittextfont="Raleway-Bold.ttf" />
 
             <LinearLayout
@@ -217,25 +221,25 @@
                     android:id="@+id/rdhalf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/edit_text_color"
                     android:text="Half"
+                    android:textColor="@color/edit_text_color"
 
-                    app:edittextfont="Raleway-Regular.ttf"/>
+                    app:edittextfont="Raleway-Regular.ttf" />
 
                 <com.yberry.dinehawaii.customview.CustomEditText
                     android:id="@+id/edhalfprice"
+                    style="@style/TextAppearance.AppCompat.Subhead"
                     android:layout_width="@dimen/_60sdp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_10sdp"
+                    android:drawableTint="@color/colorDivider"
                     android:hint="$ 000"
                     android:inputType="number"
-                    android:padding="@dimen/_10sdp"
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:visibility="gone"
                     android:maxLength="3"
-                    android:drawableTint="@color/colorDivider"
+                    android:padding="@dimen/_10sdp"
                     android:textColor="@color/edit_text_color"
-                    app:edittextfont="Raleway-Regular.ttf"></com.yberry.dinehawaii.customview.CustomEditText>
+                    android:visibility="gone"
+                    app:edittextfont="Raleway-Regular.ttf" />
 
                 <com.yberry.dinehawaii.customview.CustomCheckBox
                     android:id="@+id/rdfull"
@@ -243,25 +247,25 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:checked="true"
-                    android:textColor="@color/edit_text_color"
                     android:text="Full"
+                    android:textColor="@color/edit_text_color"
 
-                    app:edittextfont="Raleway-Regular.ttf"/>
+                    app:edittextfont="Raleway-Regular.ttf" />
 
                 <com.yberry.dinehawaii.customview.CustomEditText
                     android:id="@+id/edfullprice"
+                    style="@style/TextAppearance.AppCompat.Subhead"
                     android:layout_width="@dimen/_60sdp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_10sdp"
+                    android:drawableTint="@color/colorDivider"
                     android:hint="$ 000"
                     android:inputType="number"
-                    android:padding="@dimen/_10sdp"
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:visibility="visible"
                     android:maxLength="3"
+                    android:padding="@dimen/_10sdp"
                     android:textColor="@color/edit_text_color"
-                    android:drawableTint="@color/colorDivider"
-                    app:edittextfont="Raleway-Regular.ttf"></com.yberry.dinehawaii.customview.CustomEditText>
+                    android:visibility="visible"
+                    app:edittextfont="Raleway-Regular.ttf" />
             </LinearLayout>
 
 
@@ -271,10 +275,11 @@
                 android:layout_below="@+id/spinSelectFoodType"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:background="@color/colorDivider"></View>
+                android:background="@color/colorDivider" />
 
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/tvFoodprice"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvSelectService"
@@ -284,25 +289,25 @@
                 android:gravity="center"
                 android:text="Food Details"
                 android:textColor="@color/colorGreen"
-                style="@style/TextAppearance.AppCompat.Subhead"
                 app:edittextfont="Raleway-Bold.ttf" />
 
             <com.yberry.dinehawaii.customview.CustomEditText
                 android:id="@+id/edingredients"
-                android:hint="Key ingredients, callory etc.(max. 100)"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:padding="@dimen/_5sdp"
                 android:background="@null"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:textColor="@color/edit_text_color"
+                android:gravity="start"
+                android:hint="Key ingredients, callory etc.(max. 100)"
                 android:maxLength="100"
                 android:maxLines="3"
+                android:padding="@dimen/_5sdp"
                 android:textAlignment="textStart"
-                app:edittextfont="Raleway-Regular.ttf"
-                android:gravity="start"></com.yberry.dinehawaii.customview.CustomEditText>
+                android:textColor="@color/edit_text_color"
+                app:edittextfont="Raleway-Regular.ttf" />
+
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="1dp"
@@ -310,24 +315,41 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:background="@color/colorDivider"></View>
-            <com.yberry.dinehawaii.customview.CustomTextView
-                android:id="@+id/tvCustom"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvSelectService"
-                android:layout_marginTop="@dimen/_9sdp"
-                android:drawableLeft="@drawable/drawable_green_dot"
-                android:drawablePadding="@dimen/_5sdp"
-                android:gravity="center"
-                android:text="Add Customizations"
-                android:textColor="@color/colorGreen"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                app:edittextfont="Raleway-Bold.ttf" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.yberry.dinehawaii.customview.CustomTextView
+                    android:id="@+id/tvCustom"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="@dimen/_9sdp"
+                    android:drawableLeft="@drawable/drawable_green_dot"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:text="Add Customizations"
+                    android:textColor="@color/colorGreen"
+                    app:edittextfont="Raleway-Bold.ttf" />
+
+                <ImageView
+                    android:id="@+id/addMore"
+                    android:layout_width="@dimen/_28sdp"
+                    android:layout_height="@dimen/_28sdp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:padding="@dimen/_4sdp"
+                    android:src="@drawable/ic_add_circle_green_large" />
+
+            </RelativeLayout>
+
 
             <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_2sdp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -335,31 +357,10 @@
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recycler_items"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
             </android.support.v4.widget.NestedScrollView>
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/cardMenuList"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="right"
-                android:layout_margin="@dimen/_8sdp"
-                android:clickable="true"
-                android:elevation="5dp"
-                android:foreground="@drawable/custom_ripple_card"
-                app:cardBackgroundColor="@color/green"
-                app:cardCornerRadius="@dimen/_5sdp"
-                app:cardElevation="5dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:padding="@dimen/_5sdp"
-                    android:id="@+id/addMore"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/fab_add"/>
-            </android.support.v7.widget.CardView>
 
         </LinearLayout>
     </ScrollView>
