--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -24,13 +24,22 @@
             android:layout_height="match_parent"
             android:background="@color/colorPrimary">
         </View>
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:id="@+id/noti_image"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/imageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:paddingRight="8dp"
+            android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/logo" />
+            android:layout_marginLeft="@dimen/_8sdp"
+            app:cardCornerRadius="20dp">
+            <ImageView
+                android:id="@+id/noti_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+        </android.support.v7.widget.CardView>
 
         <LinearLayout
             android:id="@+id/text_layout"
