--- a/app/src/main/res/layout/activity_delivery_vendor_detail.xml
+++ b/app/src/main/res/layout/activity_delivery_vendor_detail.xml
@@ -281,7 +281,7 @@
                 android:drawableLeft="@drawable/drawable_green_dot"
                 android:drawablePadding="@dimen/_5sdp"
                 android:gravity="center"
-                android:text="Driver Tip Included"
+                android:text="Driver Tip"
                 android:textColor="@color/colorGreen"
                 app:edittextfont="@string/raleway_bold" />
             <RadioGroup
@@ -309,6 +309,20 @@
                     android:layout_height="wrap_content"
                     android:text="No" />
             </RadioGroup>
+            <com.yberry.dinehawaii.customview.CustomEditText
+                android:id="@+id/etDriverTip"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Enter Tip (%)"
+                android:visibility="gone"
+                android:maxLength="2"
+                android:inputType="number"
+                android:padding="@dimen/_10sdp"
+                android:singleLine="true"
+                app:edittextfont="@string/raleway_regular" />
+
+
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
